test/depType4.slq

def bad[f: ğ”¹!->!â„•,g: 1->ğ”¹](): (!ğ”¹^f(g()))[]{ // error
    return ();
}

def zerovec(n:!â„•){
	return vector(n,0:ğ”¹);
}


def main(){
	x:=0:ğ”¹;
	v:=vector(measure(x),0:ğ”¹); // error
	y:=0:ğ”¹;
	w:=zerovec(measure(y)); // error
	// def weird(x:ğ”¹)qfree:!â„•;
	// t:=vector(weird(0:ğ”¹),0:ğ”¹);  // TODO: disallow
	return w;
}
